--- a/Portfolio/css/main.css
+++ b/Portfolio/css/main.css
@@ -98,6 +98,7 @@ textarea {
    ========================================================================== */
 body{
     font-family: Open Sans;
+
 }
 /* ==========================================================================
    NAVAGATION
@@ -111,9 +112,11 @@ h2{
     margin-top: -30px;
     font-weight: 200;
 }
-
+.nav-bg{
+    width: 1920px;
+}
 .nav{
-    max-width: 75%;
+    width: 75%;
     margin-left: 12.5%;
     display: flex;
     justify-content: space-between;
@@ -135,6 +138,51 @@ ul li a{
     font-weight: 600;
 }
 
+ul li a:hover{
+    font-size: 1.5em;
+}
+
+
+/* ==========================================================================
+   HEADER
+   ========================================================================== */
+.header{
+    width: 1920px;
+    margin-top: 100px;
+}
+
+.header-items{
+    padding-top: -20px;
+    display: grid;
+    grid-gap: 6px;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+
+.header-item{
+    height: 250px;
+}
+
+.header-img img:hover{
+    margin-top: -25px;
+    margin-left: -25px;
+    position: absolute;
+    width: 365px;
+    height: 300px;
+    opacity: 1;
+}
+
+.header-img:hover h2{
+    position: absolute;
+    margin-top: 200px;
+    font-size: 1.5em;
+}
+
+.header-img h2{
+    margin-left: 137px;
+    margin-top: -50px;
+    font-weight: 500;
+    font-size: 0em;
+}
 
 
 
